Added todo Added method to load EndScreenController.fxml Minor changes and fixes